--- a/Fast_Food/Fast_Food/Fast_Food.csproj
+++ b/Fast_Food/Fast_Food/Fast_Food.csproj
@@ -69,6 +69,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Order.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
