--- a/Fast_Food/Fast_Food/Fast_Food.csproj
+++ b/Fast_Food/Fast_Food/Fast_Food.csproj
@@ -65,6 +65,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Burger.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="OrderView.xaml.cs">
       <DependentUpon>OrderView.xaml</DependentUpon>
