--- a/Fast_Food/Fast_Food/Fast_Food.csproj
+++ b/Fast_Food/Fast_Food/Fast_Food.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Burger.cs" />
+	<Compile Include="sodas.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="OrderView.xaml.cs">
       <DependentUpon>OrderView.xaml</DependentUpon>
