--- a/Fast_Food/Fast_Food/Fast_Food.csproj
+++ b/Fast_Food/Fast_Food/Fast_Food.csproj
@@ -67,6 +67,7 @@
   <ItemGroup>
     <Compile Include="Burger.cs" />
 	<Compile Include="sodas.cs" />
+	<Compile Include="Fries.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="OrderView.xaml.cs">
       <DependentUpon>OrderView.xaml</DependentUpon>
